--- a/FMindex/src/README
+++ b/FMindex/src/README
@@ -1,10 +1,11 @@
-Program se kompajlira pozivanjem skripte ./compile.sh .
-NE KORISTITI MAKEFILE (ima neku gresku)
-Stvara se izvodivi program FMindex koji sluzi za testiranje FMindeksa.
-Argumenti za FMindex:
+Program se kompajlira pozivajnem makefilea.
+Stvara se izvodivi program testFromFile koji sluzi za testiranje FMindeksa.
+Argumenti za testFromFile:
     1. put do tekstualne datoteke
     2. broj znakova koji ce se procitati s pocetka tekstualne datoteke
     3. duljina uzorka
     4. broj uzoraka
-FMindex ce ucitati zadani broj znakova iz tekstualne datoteke, 
+testFromFile ce ucitati zadani broj znakova iz tekstualne datoteke, 
 iz njega izvaditi zadani broj uzoraka zadane duljine i testirati indeks.
+
+TODO: primjer pozivanja
